--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,4 @@
-videoconference_app/__pycache__/*
-videoconference_app/migrations/*
-videoconferencing/__pycache__/*
-*.sqlite3# Byte-compiled / optimized / DLL files
+# Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
